@@ -43,6 +43,8 @@ lazy = 0
 no-printer = 0
 # do not list installed software
 no-software = 0
+# do not list environment variables
+no-environment = 0
 # allow to scan use home directories
 scan-homedirs = 0
 # save the inventory as HTML
