@@ -43,6 +43,7 @@ Major changes:
   - --debug option can be specified multiple times, for additional verbosity
   - --no-inventory, --no-ocsdeploy, --no-snmpquery, --no-netdiscovery options
     have been deprecated in favor of a generic --no-task option
+  - --no-environment allows to not list environment variables in inventory
 * fusioninventory-agent-config executable has been dropped, in favor of better
   documentation
 * documentation has been reviewed for consistency in various places where it
